- [x] make sure terminal widgets are restored in the correct order - [x] Add remaining tree toolbar items (add page, add column) - [x] Use IDs instead of "activePage" when executing toolbar commands - [x] add UUID wrapper function to prevent duplicate UUIDs - [x] fix default labels of defaul nodes - [x] fix onKeyDown behavior of renaming behavior - [x] Add quick toggle keybinding shortcut - [x] fix on selection for a single terminal in a group
TODO
- check disposal behavior of terminal manager (should save layout), need to override close behavior
- group deletion is broken on last group
- active terminal not being selected on restore
- can't type into terminal

--- a/packages/terminal/src/browser/style/terminal.css
+++ b/packages/terminal/src/browser/style/terminal.css
@@ -75,4 +75,5 @@
 .terminal-manager-inline-actions {
   display: flex;
   align-items: center;
+  cursor: pointer
 }
